syntax = "proto3";

package rivet.backend.pkg.ds.msg.drain_all;

import "proto/common.proto";

/// name = "msg-ds-drain-all"
/// parameters = [
/// 	{ name = "nomad_node_id" },
/// ]
message Message {
	optional string nomad_node_id = 1;
	optional string pegboard_client_id = 3;
	uint64 drain_timeout = 2;
}
